# testcode

./: README.md
Designpattern/: 301Adapter.cpp  302SimpleFactory.cpp  303Factory.cpp  304AbstractFactory.cpp  305Builder.cpp  306Prototype.cpp  307Adapter2.cpp  308Bridge.cpp  309Composite.cpp  310Decorator.cpp  311.Decorater.cpp  312Facade.cpp  313Flyweight.cpp  314Proxy.cpp  315ChainofResponsibility.cpp  316Command.cpp  317Iterator.cpp  318Mediator.cpp  319Memento.cpp  320Observer.cpp  321Strategy.cpp  322State.cpp  323TemplateMethod.cpp  324Visitor.cpp  CMakeLists.txt  Iterator.h  Mediator.h  Member.h  MyList.cpp  MyList.h  NewsAgency.cpp  NewsAgency.h  Observer.h  Sanji.h  State.h  Visitor.h  country.h
HelloWorld/: CMakeLists.txt  main.cpp
HelloWorld/hello/: CMakeLists.txt  hello.cpp  hello.h  hello1.cpp  hello1.h
HelloWorld/tests/: CMakeLists.txt  test_hello.cpp  test_world.cpp
HelloWorld/thirdpart/googletest-1.15.2/googletest/samples/: sample1_unittest.cc  sample2_unittest.cc  sample3-inl.h  sample3_unittest.cc
HelloWorld/world/: CMakeLists.txt  world.cpp  world.h
catch/: 100testCatch.cpp  101testSecssion.cpp  102testStringMatcher.cpp
cppNewFeatures/: 502newfeatures.cpp  503testBind.cpp  504lvalueAndrvalue.cpp  505Forward.cpp  506sharedPtr.cpp  507testenum.cpp  508Chrono.cpp  509Threadtest.cpp  510call_once.cpp  511mutex.cpp  512condition.cpp  513atomic.cpp  514future.cpp
newCppTreadPool/: threadpool.cpp  threadpool.h
testcpp/: 01testStatic.cpp  02test-yaml.cpp  03test.cpp  04test.cpp  05test.cpp  06test.cpp  07test.cpp  08test.cpp  09test.cpp  10testLoadFile.cpp  11test-threadLocal.cpp  12testFunction.cpp  13testGetaddrinfo.cpp  14test.cpp  15testmultimap.cpp  16testGetifadds.cpp  17testTemplateInclass.cpp  18testChongZaiShuChu.cpp  19testFloatbits.cpp  20testZigzag.cpp  21testDefine.cpp  22testIfDefine.cpp  23test.cpp  24testFanghanshu.cpp  25testStream.cpp  26testGDBthreads.cpp  27testMakeshared.cpp  28testGettimeofday.cpp  29testCxa_demangle.cpp  30testResize.cpp  31testList.cpp  32testTemplate.cpp  (+21 more)
(+1 files in other folders)
